Set up TCP listeners

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 authors = ["Christopher Fu <chrisf1337@gmail.com>"]
 
 [dependencies]
+rmp = "0.7.5"
+rmp-serde = "0.10.0"
+gapbuffer = { path = "gapbuffer" }
+byteorder = "1.0.0"
