--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ serde_json = "0.9"
 serde = "0.9"
 serde_derive = "0.9"
 log = "*"
-env_logger = "*"
+color_logger = { path = "color_logger" }
 byteorder = "1.0.0"
